# aol-llm

./: .gitignore  AGENTS.md  CONTRACTS.md  LICENSE  PROJECT_BRIEF.md  README.md  db.py  pyproject.toml
.github/workflows/: ci.yml
docs/: .xdp-claude-memory-structure_20260613233826910.png-RRrjur  .xdp-keybind.md.gxpaPo-OBjOom  ARCHITECTURE_AVALONIA_WORKSPACE.md  BRIEF_distiller_prompt.md  CODEBASE_SCHEMA.md  DESKTOP_TARGET_DECISION.md  PLAN_memory_engine_and_caching.md  RELEASE_CHECKLIST.md  SPEC_amendments_slices_1_4_5.md  SPEC_memory_distiller_recovery.md  SPEC_memory_engine_and_caching.md  USER_MANUAL.md  claude-memory-structure.md
scripts/: baseline_memory_backlog.py  refresh_pricing.py  update_generated_docs.py
src/aol_llm/: __init__.py  __main__.py  chat.py  config.py  export.py  generation.py  memory_distiller.py  prompt_assembly.py  secrets.py
src/aol_llm/core/: __init__.py  errors.py  pricing.py  requests.py  types.py
src/aol_llm/data/: __init__.py  memory_distiller_prompt.md  model_prices.json
src/aol_llm/providers/: _http.py  anthropic.py  base.py  openai_compat.py  openai_responses.py  registry.py
src/aol_llm/storage/: connection.py  db.py  rows.py
src/aol_llm/storage/migrations/: 001_init.sql  002_buddies_prompts.sql  003_anthropic_opus_4_8.sql  004_conversation_assistant_name.sql  005_anthropic_fable_5.sql  006_buddy_memories_and_cache_usage.sql  007_memory_distill_runs.sql  008_openai_gpt_5_6.sql
src/aol_llm/ui/: app.py  commands.py  modals.py  screens.py  styles.py  widgets.py
tests/: test_chat_service.py  test_config.py  test_core_contracts.py  test_docs_contracts.py  test_export.py  test_generation.py  test_memory_distiller.py  test_memory_recovery_script.py  test_prompt_assembly.py  test_provider_adapters.py  test_provider_contract.py  test_secrets.py  test_step2_contracts.py  test_storage_db.py  test_storage_migration.py  test_ui_commands.py
