[project]
name = "aol-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "colette", email = "121912438+resonatingloop@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.104.1",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "platformdirs>=4.9.6",
    "textual>=8.2.7",
]

[project.scripts]
aol-llm = "aol_llm:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.14",
]
